--- a/options.html
+++ b/options.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div>
-			<h1>Twishare to io</h1>
+			<h1>Twishare to Misskey</h1>
 			<p>共有先のサーバー名を設定してください。</p>
 			<p>(URLのhttps://の後に続く文字列)</p>
 			<p>デフォルト値はMisskey.ioです</p>
