Misskey.ioのURLを小文字にする

--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@
 			<h1>Twishare to Misskey</h1>
 			<p>共有先のサーバー名を設定してください。</p>
 			<p>(URLのhttps://の後に続く文字列)</p>
-			<p>デフォルト値はMisskey.ioです</p>
+			<p>デフォルト値はmisskey.ioです</p>
 			<input type="textbox" id="instance_name" />
 			<button id="save_button">保存</button>
 			<p id="save_status"></p>
