共有先サーバー名のinputのtype修正

--- a/options.html
+++ b/options.html
@@ -10,7 +10,7 @@
 			<p>共有先のサーバー名を設定してください。</p>
 			<p>(URLのhttps://の後に続く文字列)</p>
 			<p>デフォルト値はMisskey.ioです</p>
-			<input type="textbox" id="instance_name" />
+			<input type="text" id="instance_name" />
 			<button id="save_button">保存</button>
 			<p id="save_status"></p>
 		</div>
