--- a/options.html
+++ b/options.html
@@ -7,10 +7,12 @@
 	<body>
 		<div>
 			<h1>Twishare to Misskey</h1>
-			<p>共有先のサーバー名を設定してください。</p>
-			<p>(URLのhttps://の後に続く文字列)</p>
-			<p>デフォルト値はMisskey.ioです</p>
-			<input type="text" id="instance_name" />
+			<p>共有先のサーバー名(URLのhttps://のあとに続く文字列)を設定してください。デフォルト値はMisskey.ioです。</p>
+			<input type="textbox" id="instance_name" />
+			<div id="checkbox">
+				<input type="checkbox" id="button_visibility" />
+				<label for="floating_button_visibility">画面右下にシェアボタンを表示</label>
+			</div>
 			<button id="save_button">保存</button>
 			<p id="save_status"></p>
 		</div>
