--- a/options.html
+++ b/options.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div>
-			<h1>Twishare to Misskey</h1>
+			<h1><img src="assets/icon.png" id="icon" /></h1>
 			<p>共有先のサーバー名(URLのhttps://のあとに続く文字列)を設定してください。デフォルト値はmisskey.ioです。</p>
 			<input type="textbox" id="instance_name" />
 			<div id="checkboxes">
@@ -16,7 +16,7 @@
 				</div>
 				<div>
 					<input type="checkbox" id="button_visibility_on_misskey" />
-					<label for="button_visibility_on_misskey">Misskey/Calckey上で右下にボタン表示</label>
+					<label for="button_visibility_on_misskey">Misskey/Calckey上で右下にシェアボタン表示</label>
 				</div>
 			</div>
 			<button id="save_button">保存</button>
