--- a/options/options.html
+++ b/options/options.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div>
-			<h1><img src="assets/icon.png" id="icon" /></h1>
+			<h1><img src="../assets/icon.png" id="icon" /></h1>
 			<p class="description">共有先のサーバー名(URLのhttps://のあとに続く文字列)を設定してください。デフォルト値はmisskey.ioです。</p>
 			<input type="textbox" placeholder="共有先のサーバーのURLを入力" id="instance_name" />
 			<div id="checkboxes">
