--- a/options/options.html
+++ b/options/options.html
@@ -8,7 +8,7 @@
 		<div>
 			<h1><img src="../assets/icon.png" id="icon" /></h1>
 			<p class="description">共有先のサーバー名(URLのhttps://のあとに続く文字列)を設定してください。デフォルト値はmisskey.ioです。</p>
-			<input type="textbox" placeholder="共有先のサーバーのURLを入力" id="instance_name" />
+			<input type="text" placeholder="共有先のサーバーのURLを入力" id="instance_name" />
 			<div id="checkboxes">
 				<div>
 					<label for="button_visibility">
@@ -23,6 +23,8 @@
 					</label>
 				</div>
 			</div>
+			<p class="description">その他、右下のボタンを表示させないドメイン(URLの「https://」のあとから「/」まで)を入力<br>（スペース区切りで複数指定）</p>
+			<input type="text" placeholder="ドメインをスペース区切りで入力" id="sites_to_hide_button" />
 			<button id="save_button">保存</button>
 			<p id="save_status"></p>
 		</div>
