WebExtension版のためにoptionsの修正、ついでにシェアボタンのz-indexを最大値に（コミット分けろ）

--- a/options/options.html
+++ b/options/options.html
@@ -25,7 +25,9 @@
 			</div>
 			<p class="description">その他、右下のボタンを表示させないドメイン(URLの「https://」のあとから「/」まで)を入力<br>（スペース区切りで複数指定）</p>
 			<input type="text" placeholder="ドメインをスペース区切りで入力" id="sites_to_hide_button" />
-			<button id="save_button">保存</button>
+			<div>
+				<button id="save_button">保存</button>
+			</div>
 			<p id="save_status"></p>
 		</div>
 
