--- a/js_and_css/background.js.html
+++ b/js_and_css/background.js.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<script type="module">
 browser.runtime.onInstalled.addListener(() => {
 	browser.tabs.create(
 		{
@@ -5,3 +10,6 @@ browser.runtime.onInstalled.addListener(() => {
 		}
 	);
 });
+		</script>
+	</head>
+</html>
