更新勧告を至るところに書いといた

--- a/options/options.html
+++ b/options/options.html
@@ -7,6 +7,7 @@
 	<body>
 		<div>
 			<h1><img src="../assets/icon.png" id="icon" /></h1>
+			<p class="warn">⚠ これは旧版です。今後機能に関する更新は行われません。Firefox109以降のバージョンをお使いの方は、<span class="bold">この旧版を削除してから</span><a href="https://addons.mozilla.org/ja/firefox/addon/twishare-to-misskey/">こちら</a>から再インストールしてください。Firefox109以前をご利用の方など、このバージョンを使い続ける必要がある方は教えてください。対処します。</p>
 			<p class="description">共有先のサーバー名(URLのhttps://のあとに続く文字列)を設定してください。デフォルト値はmisskey.ioです。</p>
 			<input type="text" placeholder="共有先のサーバーのURLを入力" id="instance_name" />
 			<div id="checkboxes">
