設定画面にバージョンとinstalled.htmlへのリンクを追加

--- a/options/options.html
+++ b/options/options.html
@@ -7,6 +7,7 @@
 	<body>
 		<div>
 			<h1><img src="../assets/icon.png" id="icon" /></h1>
+			<p id="version">v0.2.3 <a href="https://alpaca_honke.github.io/twishare-to-misskey/installed.html">更新内容/お知らせはこちら</a></p>
 			<p class="description">共有先のサーバー名(URLのhttps://のあとに続く文字列)を設定してください。デフォルト値はmisskey.ioです。</p>
 			<input type="text" placeholder="共有先のサーバーのURLを入力" id="instance_name" />
 			<div id="checkboxes">
