--- a/options/options.html
+++ b/options/options.html
@@ -26,10 +26,10 @@
 			</div>
 			<p class="description">その他、右下のボタンを表示させないドメイン(URLの「https://」のあとから「/」まで)を入力<br>（スペース区切りで複数指定）</p>
 			<input type="text" placeholder="ドメインをスペース区切りで入力" id="sites_to_hide_button" />
-			<div>
+			<!--<div>
 				<button id="save_button">保存</button>
-			</div>
-			<p id="save_status"></p>
+            </div>-->
+            <p id="save_status"></p>
 		</div>
 
 		<script src="options.js"></script>
