--- a/options/options.html
+++ b/options/options.html
@@ -14,13 +14,13 @@
 				<div>
 					<label for="button_visibility">
 						<input type="checkbox" id="button_visibility" class="check" />
-						Misskey/Calckey以外のページで画面右下にシェアボタンを表示
+						Misskey系SNS以外のページで画面右下にシェアボタンを表示
 					</label>
 				</div>
 				<div>
 					<label for="button_visibility_on_misskey">
 						<input type="checkbox" id="button_visibility_on_misskey" class="check" />
-						Misskey/Calckey上で右下にシェアボタン表示
+						Misskey系SNS上で右下にシェアボタン表示
 					</label>
 				</div>
 			</div>
