なんか入っちゃった動かないシェアボタンを削除

--- a/options/options.html
+++ b/options/options.html
@@ -9,12 +9,12 @@
         <div>
             <h1><img src="../assets/icon.png" id="icon" /></h1>
             <span id="version">v[バージョン番号] </span><a id="installed">更新内容/お知らせはこちら</a>
-            <div class="share">
+            <!--<div class="share">
                 <button id="share_button">
                     <img src="../assets/share.png" height="45px">
                     <span id="share_button_label">現在のページをシェア</span>
                 </button>
-            </div>
+            </div>-->
             <div class="settings">
                 <h2 id="settings_title">設定</h2>
                 <p class="description" id="instance_name_form_label">共有先のサーバー名(URLのhttps://のあとに続く文字列)を設定してください。デフォルト値はmisskey.ioです。</p>
