--- a/options/options.html
+++ b/options/options.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <link rel="stylesheet" href="options.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <!--ここに挿入されてるテキストはダミーです。実際にはJSでロケールファイルから翻訳済み文字列が挿入されます。-->
